syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";
import "events.proto";

package com.evernym.verity.actor.msgoutbox.message.Events;

message MsgAdded {
    option (scalapb.message).extends = "com.evernym.verity.actor.msgoutbox.message.MessageBehaviour.Event";
    string type = 1;
    LegacyMsgData legacyMsgData = 2;
    string retentionPolicy = 3;
    StorageInfo storageInfo = 4;
    repeated string outboxIds = 5;
}

message LegacyMsgData {
    option (scalapb.message).extends = "com.evernym.verity.actor.msgoutbox.message.MessageBehaviour.Event";
    string senderDID = 1;
    google.protobuf.StringValue refMsgId = 2;
}

message ComMethodActivity {
    uint64 creationTimeInMillis = 1;
    string comMethodId = 2;
    string detail = 3;

}

message DeliveryAttemptRecorded {
    option (scalapb.message).extends = "com.evernym.verity.actor.msgoutbox.message.MessageBehaviour.Event";
    string outboxId = 1;
    string status = 2;
    ComMethodActivity comMethodActivity = 3;
}

message PayloadDeleted {
    option (scalapb.message).extends = "com.evernym.verity.actor.msgoutbox.message.MessageBehaviour.Event";
}